tests/wal/advanced/expects/axis_truncated_include_idle.bi.expect
// trace 0
trace {
}
error: [send_data@0] executing step 88 of the transaction: 0f != 0e
   ┌─ tests/wal/advanced/axis_truncated_include_idle.prot:11:5
   │
11 │     D.m_axis_tdata := data;
   │     ^^^^^^^^^^^^^^^^^^^^^^^ [send_data@0] executing step 88 of the transaction: 0f != 0e

Error: "Monitor failed"
---CODE---
1
